public/stylesheets/framework/styles.css
/* ... */
/*  HEADER */
/* ----------------------------------------------------------------------------- */
#header {
    display     : flex;
    height      : 28px;
    padding     : 20px 56px 20px; 
    position    : absolute;
    top         : 0px;
    right       : 0px;
    left        : 0px;
}
#header-logo {
    background-image    : url(../../images/autodesk-logo-white.png);
    background-size     : 66px;
    cursor              : pointer;
    height              : 28px;
    width               : 48px;
    position            : absolute;
    top                 : 18px;
    left                : 8px;
}
.light-theme #header-logo {
    background-image: url(../../images/autodesk-logo-black.png);
}
#header-title {
    cursor      : pointer;
    font-size   : 22px;
    font-weight : 800;
    line-height : 28px;
    margin-left : 10px;
}
#header-subtitle {
    border-left     : 1px solid var(--color-font);
    cursor          : pointer;
    font-size       : 20px;
    line-height     : 28px;
    margin-left     : 24px;
    padding-left    : 24px;
}
#header-descriptor {
    font-size   : 18px;
    font-weight : 700;
    line-height : 16px;
}
#header-description {
    font-size   : 12px;
    line-height : 18px;
}
#header-toolbar {
    display     : flex;
    gap         : var(--spacer-xs);
    position    : absolute;
    top         : 13px;
    right       : 32px;
    height      : 42px;
}
#header-toolbar select {
    height  : 38px;
    padding : 0px 16px;
}
#header-search {
    background    : var(--color-surface-level-3);
    border-bottom : 1px solid var(--color-surface-level-5);
    font-size     : 14px;
    height        : 30px;
    line-height   : 30px;
    margin-top    : 3px;
    padding       : 3px 16px 3px 42px;
    width         : 140px;
}
#header-search-icon {
    font-weight : 200;
    position    : relative;
    left        : 42px;
    top         : 8px;
}
#header .button {
    margin-top : 2px;
}
#header-avatar {
    background    : var(--color-surface-level-4);
    display       : inline-block;
    border-radius : 50%;
    margin-left   : var(--spacer-xl);
    height        : 42px;
    width         : 42px;
}
#header-avatar.icon-user {
    font-size   : 28px;
    font-weight : 200;
    line-height : 42px;
    text-align  : center;
}



#header.dark #header-logo {
    background-image: url(../../images/autodesk-logo-white.png);
}
#header.dark #header-subtitle {
    border-color : white;
}
.light-theme #header.dark #header-search {
    background   : var(--color-gray-900);
    border-color : white;
    color        : white;
}
.dark-theme #header-search {
    border-color : white;
}

 .dark-theme #header.dark { background : var(--color-surface-level-5); }
.black-theme #header.dark { background : var(--color-surface-level-5); }
.light-theme #header.dark { background : black; color : white; }

 .dark-theme #header.dark .button { background : var(--color-surface-level-3); border-color : var(--color-surface-level-3); }
.black-theme #header.dark .button { background : var(--color-surface-level-3); border-color : var(--color-surface-level-3); }
.light-theme #header.dark .button { background : none; color : white; }

#header.dark .button:hover { box-shadow : none; }

 .dark-theme #header.dark .button:hover { background : var(--color-surface-level-4); border-color : var(--color-surface-level-4); }
.black-theme #header.dark .button:hover { background : var(--color-surface-level-4); border-color : var(--color-surface-level-4); }
.light-theme #header.dark .button:hover { border-color : var(--color-blue-500);  color : var(--color-blue-500); }

#header.dark .button.default { 
    background   : var(--color-blue-500) ; 
    border-color : var(--color-blue-500); 
    color        : white; 
}
#header.dark .button.default:hover { 
    background   : var(--color-blue-600);  
    border-color : var(--color-blue-600); 
    color        : white; 
}

#header.dark .button.disabled,
#header.dark .button.disabled:hover {
    border-color : rgba(128, 128, 128, 0.5);
    color : #808080;
}





@media (max-width : 1440px)  {

    #header-toolbar .button.with-icon {
        min-width : unset;
        max-width : 22px;
        overflow : hidden;
    }

    #header-toolbar .button.with-icon::before {
        margin-right : 20px;
    }

}


@media only screen 
and (min-device-width : 768px) 
and (max-device-width : 1900px)  {

    #header-toolbar .button.with-icon {
        min-width : unset;
    }
    #header-toolbar .button.with-icon > span {
        display : none;
    }
    #header-toolbar .button.with-icon > span.material-symbols-sharp {
        display : block;
        margin : 0px;
    }


}




/*  SCREENS */
/* ----------------------------------------------------------------------------- */
.screen {
    padding     : 0px;
    position    : absolute;
    top         : 68px;
    right       : 0px;
    bottom      : 0px;
    left        : 0px;
}
.screen > div {
    position    : absolute;
    transition  : all ease 0.2s;
}
.screen-divider {
    background : var(--color-surface-level-2);
    position   : absolute;
}
.screen-divider.vertical {
    top     : 0px;
    bottom  : 0px;
    width   : 4px;
}
.screen-divider.horizontal {
    left    : 0px;
    right   : 0px;
    height  : 4px;
}



/*  PANELS */
/* ----------------------------------------------------------------------------- */
.panel-header {
    border-bottom   : 2px solid var(--color-surface-level-5);
    display         : flex;
    gap             : var(--spacer-s);
    height          : 48px;
    justify-content : space-between;
}
 .dark-theme .panel-header { border-color : var(--color-surface-level-4); }
.black-theme .panel-header { border-color : var(--color-surface-level-4); }
.dark-theme .surface-level-1  > .panel-header { border-color : var(--color-surface-level-5); }
.dark-theme .surface-level-2  > .panel-header { border-color : var(--color-surface-level-5); }
/* ... */

